# dt_renamer

./: Cargo.toml
dt_renamer/: Cargo.toml  README.md
dt_renamer/src/: error.rs  lib.rs  operation_engine.rs  rename_tree.rs  script.rs
dt_renamer/src/operations/: directory.rs  expressions.rs  file.rs  match_rule.rs  mod.rs  operation.rs  operation_engine.rs  supporting_objects.rs
dt_renamer/src/rules/: file_rule.rs  match_rule.rs  mod.rs  rule.rs  rule_engine.rs
dt_walker/: Cargo.toml
dt_walker/src/: error.rs  lib.rs  walker.rs
dtrn/: Cargo.toml
dtrn/src/: main.rs
src/: error.rs  lib.rs  rename_engine.rs  rename_tree.rs
src/rules/: mod.rs  rule.rs  rule_engine.rs
