[package]
name = "dt_renamer"
version = "0.1.0"
edition = "2021"

[features]
default = ["regex_match"]
regex_match = ["regex"]
serializable = ["serde"]

[dependencies]
dt_walker = { version = "0.1.0", path = "../dt_walker" }
itertools = "0.12"
regex = { version = "1.0", optional = true }
convert_case = "0.6"
paste = "1.0"
serde = { version = "1.0", optional = true, features = ["derive"] }
